# cessna-he

./: .gitignore  pyproject.toml  readme.md  requirements.txt  resultados_rho350.csv  tales of debug.md
data/: CaravanDEP_powertrain_retrofit_2.yml  CaravanDEP_retrofit.yml  Input_CaravanDEP_2_036.xml
results/: oad_process_inputs_CaravanDEP_retrofit_2_036.xml  oad_process_outputs_CaravanDEP_retrofit_2_036.xml  turbo_electric_propulsion_2_036.csv  turbo_electric_propulsion_pt_watcher_2.csv
src/: Caravan_DEP_auto.ipynb  Caravan_DEP_auto_engine_version.ipynb  config.py  data_extraction.py  postprocessing.py  run_study.py  simulation.py  xml_io.py
