[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ---------------------------------------------------------------------------
# Metadados do projeto
# ---------------------------------------------------------------------------
[project]
name = "caravanDEP-study"
version = "0.1.0"
description = "Estudo paramétrico de hibridização elétrica da aeronave Caravan DEP"
readme = "README.md"
requires-python = ">=3.10,<3.12"

license = { text = "Proprietary" }

authors = [
  { name = "Victor Guimarães" },
]

# ---------------------------------------------------------------------------
# Dependências de runtime
# ---------------------------------------------------------------------------
dependencies = [
  # NumPy — fixado abaixo de 2.0 por incompatibilidade do fastga e fastga_he
  # com as APIs quebradas no NumPy 2.x (np.sum(generator), array 0-d → scalar, etc.)
  # NÃO fazer upgrade sem testar extensivamente.
  "numpy>=1.23,<2.0",

  # Parsing de XML de input (BeautifulSoup com parser lxml)
  "beautifulsoup4>=4.12",
  "lxml>=5.0",

  # Análise de dados e saída CSV
  "pandas>=2.0",

  # Framework de otimização multidisciplinar de aeronaves
  # Fixado em <1.8 para manter compatibilidade com openmdao<3.38
  # exigido pelo FAST-OAD-CS23-HE. NÃO fazer upgrade sem checar a chain:
  # fast-oad-core → openmdao → fastga_he
  "fast-oad-core>=1.7.3,<1.8",

  # OpenMDAO — fixado abaixo de 3.38 por exigência do FAST-OAD-CS23-HE
  # O fast-oad-core 1.9.0 puxou o 3.42.0 que é incompatível.
  "openmdao>=3.30,<3.38",

  # FAST-OAD-CS23-HE e fast-ga são repositórios locais — não entram aqui.
  # Instale-os antes com:
  #   pip install -r requirements-local.txt
  # O FAST-OAD-CS23-HE também requer a remoção do aerosandbox das suas
  # dependências para evitar conflito com o pin do numpy (<2.0).
]

# ---------------------------------------------------------------------------
# Dependências opcionais
# ---------------------------------------------------------------------------
[project.optional-dependencies]

dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "pandas-stubs>=2.0",
]

notebooks = [
  "jupyter>=1.0",
  "plotly>=5.0",    # usado pelo fastga_he para gráficos interativos
  "kaleido>=0.2",   # exportação estática de figuras Plotly
]

# ---------------------------------------------------------------------------
# Entry points
# ---------------------------------------------------------------------------
[project.scripts]
run-study = "run_study:run_study"

# ---------------------------------------------------------------------------
# Configuração do setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["utils*"]

# ---------------------------------------------------------------------------
# Ruff — linter e formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E501",
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_unused_imports = true
warn_return_any = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"